@@ -11,6 +11,9 @@ Differences between current and Android 2.3:
 
 - <time.h>: Add timegm(), timelocal(), time2posix() and posix2time()
 
+- <sched.h>: Add sched_getcpu(), sched_getaffinity(), sched_setaffinity(),
+  cpu_set_t and related macros (e.g. CPU_SETSIZE, CPU_ZERO, CPU_SET, ...)
+
 -------------------------------------------------------------------------------
 Differences between Android 2.3 and Android 2.2:
 
